# QuadricSimplification

./: .gitignore  CMakeLists.txt  GLWidget.hpp  OliverpeQuadricSimplification.sln  OliverpeQuadricSimplification.vcxproj  OliverpeQuadricSimplification.vcxproj.filters  README.md  Scene.hpp  dialogs.hpp  elements.hpp  icMatrix.hpp  icVector.hpp  main.cpp  mainwindow.h  messagestream.hpp  polyhedron.hpp  trackball.hpp
src/: dialogs.hpp  glwidget.hpp  icMatrix.hpp  icVector.hpp  main.cpp  mainwindow.hpp  messagestream.hpp  ply_io.h  scene.hpp  trackball.hpp  window.hpp
